--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1><a href="{{ site.url }}/" style="color:#fff">Data-Sets</a></h1>
+        <h1><a href="{{ site.baseurl }}/" style="color:#fff">Data-Sets</a></h1>
         <h2>Public data-sets</h2>
         <a href="https://github.com/FreeON/data-sets" class="button">
           <small>View project on</small> GitHub
@@ -82,15 +82,7 @@
           <a href="https://twitter.com/jasonlong">Jason Long</a>.
           Now it is hand groomed by the authors.</p>
 
-          <center>
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- github spammpack add -->
-            <ins class="adsbygoogle"
-              style="display:inline-block;width:160px;height:600px"
-              data-ad-client="ca-pub-4328959315579213"
-              data-ad-slot="1272689850"></ins>
-            <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
-          </center>
+          {% include responsive_ad.html %}
 
         </aside>
       </div>
